--- a/DoxOnBox/en.lproj/MainStoryboard_iPad.storyboard
+++ b/DoxOnBox/en.lproj/MainStoryboard_iPad.storyboard
@@ -33,7 +33,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="1sp-hi-UZ9" kind="popover" identifier="BoxPopoverSegue" popoverAnchorView="dGp-Xi-n1K" id="91b-bh-go2">
+                                    <segue destination="Irg-6v-7Ze" kind="popover" popoverAnchorView="dGp-Xi-n1K" id="Tvg-zn-hlK">
                                         <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                     </segue>
                                 </connections>
@@ -92,7 +92,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kDU-Ri-kj3" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="1sp-hi-UZ9" customClass="DXBoxBrowserTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="YO3-re-RXt">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
+                        <rect key="frame" x="0.0" y="44" width="768" height="980"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -111,10 +111,52 @@
                             <outlet property="delegate" destination="1sp-hi-UZ9" id="zaE-k7-lJ8"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="v4o-wR-lPt"/>
                     <value key="contentSizeForViewInPopover" type="size" width="320" height="800"/>
                 </tableViewController>
             </objects>
             <point key="canvasLocation" x="20" y="-129"/>
+        </scene>
+        <!--Table View Controller - Root View Controller-->
+        <scene sceneID="pob-Mc-dtC">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="84U-Tw-MWU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController id="9a7-Wl-Rco" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="5uk-Ne-R7X">
+                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TableViewCellRe" id="rNa-mE-AXB">
+                                <rect key="frame" x="0.0" y="22" width="768" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="768" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="DSB-my-lF2"/>
+                </tableViewController>
+            </objects>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="jFN-pi-fzB">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a8r-H2-jGD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController definesPresentationContext="YES" id="Irg-6v-7Ze" sceneMemberID="viewController">
+                    <value key="contentSizeForViewInPopover" type="size" width="320" height="800"/>
+                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="85V-Dl-2vO">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="1sp-hi-UZ9" kind="relationship" relationship="rootViewController" id="tZq-nY-cGd"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="643" y="-1167"/>
         </scene>
     </scenes>
     <resources>
