--- a/DoxOnBox/en.lproj/MainStoryboard_iPad.storyboard
+++ b/DoxOnBox/en.lproj/MainStoryboard_iPad.storyboard
@@ -117,31 +117,6 @@
             </objects>
             <point key="canvasLocation" x="20" y="-129"/>
         </scene>
-        <!--Table View Controller - Root View Controller-->
-        <scene sceneID="pob-Mc-dtC">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="84U-Tw-MWU" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tableViewController id="9a7-Wl-Rco" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="5uk-Ne-R7X">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TableViewCellRe" id="rNa-mE-AXB">
-                                <rect key="frame" x="0.0" y="22" width="768" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="768" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                            </tableViewCell>
-                        </prototypes>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="DSB-my-lF2"/>
-                </tableViewController>
-            </objects>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="jFN-pi-fzB">
             <objects>
@@ -161,7 +136,7 @@
     </scenes>
     <resources>
         <image name="BoxTopBarLogo.png" width="58" height="34"/>
-        <image name="linen_dark_1024.png" width="1024" height="1024"/>
+        <image name="linen_dark_1024.png" width="16" height="16"/>
     </resources>
     <classes>
         <class className="BLColorizedTextView" superclassName="UIView">
@@ -172,6 +147,9 @@
         </class>
         <class className="DXBoxBrowserTableViewController" superclassName="BoxBrowserTableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DXBoxBrowserTableViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="popoverController" candidateClass="UIPopoverController"/>
+            </relationships>
         </class>
         <class className="DXDataViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DXDataViewController.h"/>
