--- a/DoxOnBox/en.lproj/MainStoryboard_iPad.storyboard
+++ b/DoxOnBox/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,28 +1,49 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11E53" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11E53" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="lo7-Xg-f0c">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
         <development defaultVersion="4200" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="qb8-z8-Xk4">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KaC-M0-WtO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController definesPresentationContext="YES" id="lo7-Xg-f0c" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" barStyle="blackOpaque" id="9ee-W7-U2a">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="2" kind="relationship" relationship="rootViewController" id="5qv-mE-4oc"/>
+                    </connections>
+                </navigationController>
+                <barButtonItem title="Item" id="53o-GX-abm"/>
+            </objects>
+            <point key="canvasLocation" x="-1826" y="-1046"/>
+        </scene>
         <!--Root View Controller-->
         <scene sceneID="4">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
                 <viewController id="2" customClass="DXRootViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="16">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <rect key="frame" x="0.0" y="64" width="768" height="916"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="linen_dark_1024.png" id="Ppw-4V-BJr">
-                                <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="916"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="dGp-Xi-n1K">
-                                <rect key="frame" x="20" y="20" width="152" height="37"/>
+                        </subviews>
+                        <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="iON-rS-DQY">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="P95-UG-v2I">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="dGp-Xi-n1K">
+                                <rect key="frame" x="7" y="3" width="152" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="boldSystem" size="button"/>
                                 <size key="titleShadowOffset" width="2" height="2"/>
                                 <state key="normal" image="BoxTopBarLogo.png">
@@ -38,12 +59,12 @@
                                     </segue>
                                 </connections>
                             </button>
-                        </subviews>
-                        <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
-                    </view>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="-1163" y="-383"/>
+            <point key="canvasLocation" x="-867" y="-1175"/>
         </scene>
         <!--Data View Controller-->
         <scene sceneID="7">
@@ -71,20 +92,19 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.97826086960000003" green="0.91848131079999995" blue="0.73914263440000005" alpha="1" colorSpace="calibratedRGB"/>
                         <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
                     </view>
                     <navigationItem key="navigationItem" id="hxn-5L-6AM"/>
                     <connections>
+                        <outlet property="backgroundView" destination="12" id="9du-UB-C8Q"/>
                         <outlet property="dataLabel" destination="14" id="15"/>
                         <outlet property="textView" destination="6ZJ-yy-U9b" id="KWm-1Y-QIh"/>
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="896" y="-139"/>
+            <point key="canvasLocation" x="2200" y="-1123"/>
         </scene>
         <!--Box Browser Table View Controller-->
         <scene sceneID="QNb-aL-TWw">
@@ -115,13 +135,13 @@
                     <value key="contentSizeForViewInPopover" type="size" width="320" height="800"/>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="20" y="-129"/>
+            <point key="canvasLocation" x="1276" y="-1175"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Navigation Controller - Box Nav Controller-->
         <scene sceneID="jFN-pi-fzB">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a8r-H2-jGD" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController storyboardIdentifier="BoxPopoverSegue" definesPresentationContext="YES" id="Irg-6v-7Ze" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="" title="Box Nav Controller" definesPresentationContext="YES" id="Irg-6v-7Ze" sceneMemberID="viewController">
                     <value key="contentSizeForViewInPopover" type="size" width="320" height="800"/>
                     <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="85V-Dl-2vO">
                         <autoresizingMask key="autoresizingMask"/>
@@ -131,12 +151,12 @@
                     </connections>
                 </navigationController>
             </objects>
-            <point key="canvasLocation" x="643" y="-1167"/>
+            <point key="canvasLocation" x="131" y="-1167"/>
         </scene>
     </scenes>
     <resources>
         <image name="BoxTopBarLogo.png" width="58" height="34"/>
-        <image name="linen_dark_1024.png" width="16" height="16"/>
+        <image name="linen_dark_1024.png" width="1024" height="1024"/>
     </resources>
     <classes>
         <class className="BLColorizedTextView" superclassName="UIView">
@@ -154,6 +174,7 @@
         <class className="DXDataViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DXDataViewController.h"/>
             <relationships>
+                <relationship kind="outlet" name="backgroundView" candidateClass="UIView"/>
                 <relationship kind="outlet" name="dataLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="textView" candidateClass="BLColorizedTextView"/>
             </relationships>
